--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+.classpath
+.project
+.settings
+bin
+
 # Ignore Gradle build output directory
 site/
 target/
