--- a/resources/Dockerfile
+++ b/resources/Dockerfile
@@ -1,2 +1,6 @@
 FROM squidfunk/mkdocs-material
-RUN pip install mkdocs-gen-files mike && git config --global credential.helper 'store --file=/root/.git-credentials'
+RUN pip install \
+    mkdocs-gen-files \
+    mike \
+    pymdown-extensions && \
+    git config --global credential.helper 'store --file=/root/.git-credentials'
