--- a/resources/Dockerfile
+++ b/resources/Dockerfile
@@ -1,6 +1,7 @@
 FROM squidfunk/mkdocs-material
 RUN pip install \
     mkdocs-gen-files \
+    mkdocs-pdf-export-plugin \
     mike \
     pymdown-extensions && \
     git config --global credential.helper 'store --file=/root/.git-credentials'
