--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,15 +8,18 @@ theme:
     - navigation.instant
     - navigation.tabs
     - navigation.sections
+    - navigation.indexes
 
 repo_url: https://github.com/steven-terrana/jte-library-scaffold
+
+watch:
+- libraries
 
 plugins:
   - search:
   - gen-files:
       scripts:
         - /docs/resources/copy_docs.py
-  - pdf-export:
 
 extra:
   version:
